# SNRv9

./: .clinerules  CMakeLists.txt  ESP32_and_GPS.md  IO_System_Logic_Analysis.md  IO_Test_Auto_Refresh_Enhancement.md  PSRAM_FIX_SUMMARY.md  SNRv8_Complete_IO_System_Documentation.md  SNRv8_IO_Configuration_and_Processing_Architecture.md  SNRv9_Step6_IO_System_Implementation_Report.md  SNRv9_Step7_Request_Priority_Management_Implementation_Plan.md  SNRv9_Step7_Request_Priority_Management_Implementation_Report.md  SNRv9_Step7_Request_Priority_Management_Integration_Report.md  SNRv9_Step_9_Advanced_Features_Alarming.md  SNRv9_Step_9_Advanced_Features_Scheduling.md  SNRv9_Step_9_Advanced_Features_Time_Management.md  SNRv9_Step_9_Advanced_Features_Trending.md  SNRv9_Step_9_Complete_Implementation_Plan.md  SNRv9_Step_9_Phase_3_Scheduling_System_Implementation_Plan.md  io_config full_ES32D26 wEnabledProcessing.json  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.old  upload_littlefs.bat  upload_littlefs.py  upload_littlefs_espidf.bat  upload_littlefs_simple.py
components/core/: CMakeLists.txt  README.md  alarm_manager.c  gpio_handler.c  io_manager.c  memory_monitor.c  psram_manager.c  psram_task_examples.c  psram_test_suite.c  shift_register_handler.c  signal_conditioner.c  task_tracker.c  time_manager.c
components/web/: CMakeLists.txt  README.md  io_test_controller.c  request_priority_manager.c  request_priority_test_suite.c  request_queue.c  (+4 more)
src/: CMakeLists.txt  auth_controller.c  main.c  memory_monitor.c  static_file_controller.c  storage_manager.c  task_tracker.c  web_server_manager.c  wifi_handler.c
(+54 files in other folders)
