idf_component_register(
    SRCS "memory_monitor.c"
         "task_tracker.c"
         "psram_manager.c"
         "psram_task_examples.c"
         "psram_test_suite.c"
         "gpio_handler.c"
         "shift_register_handler.c"
         "signal_conditioner.c"
         "alarm_manager.c"
         "io_manager.c"
    INCLUDE_DIRS "include"
    REQUIRES "freertos"
             "esp_timer"
             "esp_system"
             "driver"
             "esp_adc"
             "storage"
    PRIV_REQUIRES "storage"
)
